Servis za brisanje user-a na osnovu kljuca (radi se sotf delete -> active = 0)